# contracts

./: .gitignore  Cargo.toml  EVENTS.md  TODO.md
.github/workflows/: fuzz-validation.yml
contracts/access-control/: DID_INTEGRATION.md
contracts/access-control/src/: lib.rs  test.rs
contracts/allergy-management/src/: test.rs
contracts/allergy-tracking/src/: test.rs
contracts/care-plan/src/: test.rs
contracts/clinical-guideline/src/: test.rs
contracts/clinical-trial/src/: lib.rs  test.rs
contracts/dental-records/src/: test.rs
contracts/doctor-registry/src/: lib.rs  test.rs
contracts/emergency-medical-info/src/: test.rs
contracts/hai-tracking/src/: test.rs
contracts/health-records/: Cargo.toml
contracts/health-records/src/: lib.rs  test.rs
contracts/healthcare-analytics/src/: test.rs
contracts/imaging-radiology/src/: test.rs
contracts/immunization-registry/src/: test.rs
contracts/medical-claims/src/: test.rs
contracts/medical-device-tracking/src/: test.rs
contracts/mental-health/src/: test.rs
contracts/multisig-governance/src/: test.rs
contracts/nutrition-care-management/src/: test.rs
contracts/pacs-integration/src/: test.rs
contracts/patient-registry/fuzz/: Cargo.toml
contracts/patient-registry/fuzz/corpus/: .gitignore
contracts/patient-registry/fuzz/corpus/validate_cid/: seed_v1_min
contracts/patient-registry/fuzz/corpus/validate_did/: seed_web
contracts/patient-registry/fuzz/fuzz_targets/: validate_cid.rs  validate_did.rs  validate_score.rs
contracts/patient-registry/src/: lib.rs  test.rs  validation.rs
contracts/patient-registry/test_snapshots/test/: test_grant_access_and_add_medical_record.1.json  test_is_patient_registered.1.json  test_register_and_get_patient.1.json  test_update_patient.1.json
contracts/patient-vitals/src/: test.rs
contracts/prenatal-pediatric/src/: test.rs
contracts/provider-registry/src/: lib.rs  test.rs
contracts/referral/src/: test.rs
contracts/src/: lib.rs  test.rs
contracts/telemedicine/src/: test.rs
contracts/zk-eligibility-verifier/: Cargo.toml  INTERFACE.md
contracts/zk-eligibility-verifier/src/: interface.rs  lib.rs
contracts/zk-eligibility-verifier/tests/: zk_verifier_integration.rs
