[workspace]
resolver = "2"
members = [
  "contracts",
  "contracts/patient-registry",
  "contracts/hospital-registry",
  "contracts/insurer-registry",
  "contracts/financial-records",
  "contracts/doctor-registry",
  "contracts/access-control",
  "contracts/prescription-management",
  "contracts/healthcare-analytics",
  "contracts/telemedicine",
  "contracts/patient-vitals",
  "contracts/referral",
  "contracts/lab-management",
  "contracts/allergy-tracking",
  "contracts/allergy-management",
  "contracts/immunization-registry",
  "contracts/medical-claims",
  "contracts/emergency-medical-info",
  "contracts/imaging-radiology",
  "contracts/clinical-guideline",
  "contracts/hospital-discharge-management",
  "contracts/care-plan",
  "contracts/pacs-integration",
  "contracts/healthcare-credentialing",
  "contracts/nutrition-care-management",
  "contracts/dental-records",
  "contracts/mental-health",
  "contracts/rehabilitation-services",
  "contracts/prenatal-pediatric",
  "contracts/hai-tracking",
  "contracts/medical-device-tracking",
  "contracts/provider-registry",
  "contracts/multisig-governance",
  "contracts/upgrade-governance",
  "contracts/zk-eligibility-verifier",
  "contracts/clinical-trial",
]
exclude = ["contracts/patient-registry/benches"]

[workspace.dependencies]
soroban-sdk = "23"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
